# Ai-pulse

./: .agent.md  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_init.py  0002_feed_item_translations.py  0003_feed_item_content.py  0004_feed_item_reason.py  0005_user_item_state.py
backend/app/: __init__.py  cache.py  constants.py  db.py  enrich_og.py  llm_backfill.py  main.py  reformat_punct.py  split_reason.py  translate_backfill.py
backend/app/api/: deps.py  healthz.py
backend/app/api/v1/: auth.py  (+4 more)
backend/app/collectors/: arxiv.py  base.py  hackernews.py  og_meta.py  rss.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  observability.py  security.py
backend/app/models/: __init__.py  base.py  feed_item.py  user.py  user_item_state.py
backend/app/repositories/: feed_item_repo.py  user_item_state_repo.py  user_repo.py
backend/app/schemas/: auth.py  common.py  feed_item.py
backend/app/services/: __init__.py
backend/app/usecases/: auth_usecase.py  categorize.py  enrich_usecase.py  feed_usecase.py  ingest_usecase.py  item_state_usecase.py
backend/tests/: conftest.py  test_api.py  test_categorize.py  test_collectors.py  test_config.py  test_item_state.py  test_llm.py  test_og_meta.py  test_security.py  test_split_reason.py  test_translation.py
(+131 files in other folders)
