[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-pulse-backend"
version = "0.1.0"
description = "ai-pulse backend: AI news aggregator (RSS / Hacker News / arXiv) with classification + auth"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Yang" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "redis>=5.0",
    "feedparser>=6.0.11",
    "python-multipart>=0.0.9",
    "greenlet>=3.0",
]

[project.optional-dependencies]
# Lazy-loaded provider SDKs (铁律二). Not installed in prototyping; install per activated provider.
providers = [
    "asyncmy>=0.2.9",
    "oracledb>=2.2",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
